--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-multi-date-picker": "^3.3.4",
+    "react-router": "^6.10.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "rsuite": "^5.29.0",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch data.json --port 3003"
   },
   "eslintConfig": {
     "extends": [
