--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@mui/x-data-grid": "^6.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assignment14b": "^0.1.2",
     "axios": "^1.3.4",
     "json-server": "^0.17.3",
     "nanoid": "^4.0.2",
@@ -22,6 +25,7 @@
     "react-scripts": "5.0.1",
     "rsuite": "^5.29.0",
     "serve": "^14.2.0",
+    "state-drop-down": "^0.10.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
